# i-am-bored-btw

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE.md  README.md
.github/workflows/: firstrelease.yml
cmd/: CMakeLists.txt  compile_and_run.c  compile_and_run.h  debug_handler.c  debug_handler.h  log.h  main.c  version.h.in
docs/: language_specification.md
examples/: alphabet.boredbtw  echo.boredbtw  hello-bored.boredbtw  i-am-bored-btw-forever.boredbtw  print-null-char.boredbtw  reverse.boredbtw  sleep-demo.boredbtw
examples/errors/compile/: invalid-token.boredbtw
examples/libiabb/: CMakeLists.txt
examples/libiabb/i-am-bored-btwxx/: CMakeLists.txt  README.md  main.cpp
examples/libiabb/token-printer/: CMakeLists.txt  README.md  main.c
lib/: CMakeLists.txt
lib/include/iabb/: buffer.h  context.h  errors.h  lexer.h  targets.h  token.h  version.h.in
lib/include/iabb/targets/: bytecode.h  jit_x86_64.h
lib/src/: buffer.c  context.c  errors.c  lexer.c  targets.c  token.c
lib/src/targets/: bytecode.c  bytecode_compile.c  bytecode_run.c  jit_x86_64_compile.c  jit_x86_64_run.c
